--- a/src/scss/partials/_navs.scss
+++ b/src/scss/partials/_navs.scss
@@ -33,6 +33,7 @@ header {
       padding-top: 12px;
       font-weight: bold;
       display: inline-block;
+      color: #F0386B;
     }
     .brandboxWelcome {
       margin-left: 56px;
