--- a/src/scss/partials/_images.scss
+++ b/src/scss/partials/_images.scss
@@ -35,13 +35,16 @@ img {
     }
 }
 .drag-drop {
-  min-height: 200px;
-  width: 200px;
-  background-color: yellow;
+  background-image: url("/assets/images/dragdrop.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 120px;
+  width: 160px;
   border-radius: 5px;
   line-height: 0px;
   color: white;
   text-align: center;
+  margin-bottom: 10px;
 
 }
 
