--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,3 +1,3 @@
 <section class="homebackground">
-  <p class="hometext">Home Landing page.<br>To contain content in the middle of the screen and navbar</p>
+  <p class="hometext">Welcome to the London Fashion Exchange. Exchange your quality pre-loved clothing, shoes and accessories to freshen up your wardrobe at zero cost!</p>
 </section>
