--- a/src/templates/itemsEdit.html
+++ b/src/templates/itemsEdit.html
@@ -2,7 +2,7 @@
   <form novalidate ng-submit="itemsEdit.update()">
 
     <div class="twelve columns">
-      <label>Image</label>
+      <label><h3>Drag & Drop Image Below</h3></label>
 
       <drag-drop base64="itemsEdit.item.base64" src="itemsEdit.item.image">Add New Image</drag-drop>
     </div>
