--- a/src/templates/itemsShow.html
+++ b/src/templates/itemsShow.html
@@ -11,25 +11,23 @@
       <p><strong>Condition: </strong>{{ itemsShow.item.condition }}</p>
       <p><strong>Size: </strong>{{ itemsShow.item.size }}</p>
     </div>
-  </div>
 
   <button ng-if="itemsShow.isCurrentUser() && itemsShow.isLoggedIn()" ui-sref="itemsEdit({ id: itemsShow.item.id })">Edit</button>
 
   <button ng-if="itemsShow.isCurrentUser() && itemsShow.isLoggedIn()"
   ui-sref="itemsShow.delete({ id: itemsShow.item.id })">Delete</button>
 
-</section>
 
-<br>
 <button ng-click="itemsShow.toggleForm()">I want this!</button>
 
 <form ng-submit="itemsShow.createSwap()" ng-show="itemsShow.formVisible">
-  Choose from these items to swap:
+  <h6>Choose from these items to swap:</h6>
   <ul>
     <li ng-repeat="item in itemsShow.user.items" ng-class="{'alreadyOffered': item.alreadyOffered}">
-      <a role="button" ng-click="itemsShow.selectOffer(item)">{{ item.description}}</a>
+      <a role="button" ng-click="itemsShow.selectOffer(item)">{{ item.description}}<p ng src="{{itemsShow.selectOffer(item)}}"></p></a>
+
     </li>
   </ul>
-  <input type="submit" value="Swap!">
+  <button type="submit" value="Swap!">Initiate Swap!</button>
 </form>
 </center>
