--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -2,11 +2,11 @@
   <center class="toppadding">
   <form novalidate ng-submit="login.submit()">
     <div>
-      <label>Email</label>
+      <!-- <label>Email</label> -->
       <input type="email" placeholder="Email" ng-model="login.credentials.email">
     </div>
     <div>
-      <label>Password</label>
+      <!-- <label>Password</label> -->
       <input type="password" placeholder="Password" ng-model="login.credentials.password">
     </div>
 
